# craftinginterpreters

./: .gitignore  shell.nix
book/: a-bytecode-virtual-machine.md  a-map-of-the-territory.md  appendix-ii.md  backmatter.md  classes.md  control-flow.md  evaluating-expressions.md  functions.md  index.md  inheritance.md  introduction.md  parsing-expressions.md  representing-code.md  resolving-and-binding.md  scanning.md  statements-and-state.md  the-lox-language.md
python/: errors.py  pyproject.toml
python/lox/: __init__.py  __main__.py  ast.py  env.py  errors.py  eval.py  interpreter.py  lox.py  parser.py  printer.py  resolver.py  runtime.py  scanner.py  testing.py  tokens.py  types.py
python/tests/: conftest.py  test_01_scanning.py  test_02_representing_code.py  test_03_parsing_expressions copy.py  test_03_parsing_expressions.py  test_04_evaluating_expressions.py  test_05_statements_and_state.py  test_06_control_flow.py  test_07_functions.py  test_08_resolving_and_binding.py  test_09_classes.py  test_10_inheritance.py  test_all.py
site/: a-bytecode-virtual-machine.html  a-map-of-the-territory.html  a-tree-walk-interpreter.html  a-virtual-machine.html  appendix-i.html  backmatter.html  calls-and-functions.html  chunks-of-bytecode.html  classes-and-instances.html  classes.html  closures.html  compiling-expressions.html  contents.html  control-flow.html  evaluating-expressions.html  functions.html  garbage-collection.html  global-variables.html  hash-tables.html  inheritance.html  introduction.html  jquery-3.4.1.min.js  jumping-back-and-forth.html  optimization.html  (+12 more)
(+9 files in other folders)
